<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="dam.pmdm.tarea2_manjoncarrascojosecarlos.listFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/detailsFragment"
        android:name="dam.pmdm.tarea2_manjoncarrascojosecarlos.DetailsFragment"
        android:label="@string/pikmin_details"
        tools:layout="@layout/fragment_details" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="dam.pmdm.tarea2_manjoncarrascojosecarlos.SettingsFragment"
        android:label="@string/ajustes_title"
        tools:layout="@layout/fragment_settings" />


</navigation>